fix: Improve the readme and download link appearance in dark mode (#21)

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,7 +2,7 @@
     --foreground-color: #000;
     --background-color: rgb(246, 246, 246);
     --secondary-background-color: #fff;
-    --divider-color: #eee;
+    --tertiary-background-color: #eee;
     --link-color: orange;
 }
 
@@ -12,7 +12,7 @@
         --foreground-color: #fff;
         --background-color: #171616;
         --secondary-background-color: rgb(33, 32, 33);
-        --divider-color: #3e3e3e;
+        --tertiary-background-color: #2b2b2b;
         --link-color: orange;
     }
 }
@@ -129,7 +129,7 @@ table.statistics {
 }
 
 .screenshots {
-    border-bottom: 1px solid var(--divider-color);
+    border-bottom: 1px solid var(--tertiary-background-color);
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     overflow-x: scroll;
@@ -137,7 +137,7 @@ table.statistics {
 }
 
 .screenshot {
-    border: 1px solid var(--divider-color);
+    border: 1px solid var(--tertiary-background-color);
     max-width: 90%;
 }
 
@@ -165,7 +165,7 @@ ul.applications > li {
 }
 
 .application-header {
-    border-bottom: 1px solid var(--divider-color);
+    border-bottom: 1px solid var(--tertiary-background-color);
     display: grid;
     grid-template-columns: 2fr 1fr;
     align-items: baseline;
@@ -189,19 +189,19 @@ ul.applications > li {
 }
 
 .summary {
-    border-bottom: 1px solid var(--divider-color);
+    border-bottom: 1px solid var(--tertiary-background-color);
     margin-bottom: 1rem;
 }
 
 .readme {
-    border-bottom: 1px solid var(--divider-color);
+    border-bottom: 1px solid var(--tertiary-background-color);
     padding-bottom: 1rem;
     margin-bottom: 1rem;
 }
 
 a.install {
     color: orange;
-    background-color: #eee;
+    background-color: var(--tertiary-background-color);
     font-weight: 600;
     text-decoration: none;
     padding: 0.6em 1em;
@@ -212,7 +212,7 @@ a.install {
 .readme-contents {
     white-space: pre-wrap;
     font-family: monospace;
-    background-color: #eee;
+    background-color: var(--tertiary-background-color);
     border-radius: 0.5rem;
     padding: 2rem;
 }
